packages/stencil-lib/src/components/inno-radio/inno-radio.scss
@use '@innomotics/brand-experience/styles/colors';

$radio-size: 20px;
$border-size: 1.5px;

@mixin checkmark-base {
  width: 14px;
  height: 14px;
  background-color: colors.$primary-200;
  border-radius: 50%;
}

* {
  box-sizing: border-box;
}

:host {
  height: 25px;
  display: inline-flex;
  justify-content: flex-start;
  align-items: center;
  font-family: 'InnomoticsHafferSQ';
  font-weight: 300;
  position: relative;

  // Remove focus default style
  outline-width: 0;
}

input {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.checkbox {
  width: $radio-size;
  height: $radio-size;
  border-radius: 50%;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;

  &.focus {
    outline: $border-size solid colors.$focus-100;
    outline-offset: 2px;
  }

  &.light {
    background-color: colors.$primary-300;
    border: $border-size solid colors.$primary-200;
  }

  &.dark {
    background-color: colors.$primary-200;
    border: $border-size solid colors.$primary-300;
  }

  &:hover {
    &.light {
      background-color: colors.$primary-300;
      border: $border-size solid colors.$secondary-600;
    }

    &.dark {
      background-color: colors.$primary-200;
      border: $border-size solid colors.$secondary-400;
    }
  }

  &:active {
    &.light {
      background-color: colors.$primary-300;
      border: $border-size solid colors.$secondary-600;
    }

    &.dark {
      background-color: colors.$primary-200;
      border: $border-size solid colors.$secondary-400;
    }
  }

  &.error {
    &.light {
      background-color: colors.$primary-300;
      border: $border-size solid colors.$error-200;
    }

    &.dark {
      background-color: colors.$primary-200;
      border: $border-size solid colors.$error-100;
    }
  }

  &.readonly {
    cursor: default;

    &.light {
      background-color: colors.$primary-300;
      border: $border-size solid colors.$secondary-400;
    }

    &.dark {
      background-color: colors.$primary-200;
      border: $border-size solid colors.$secondary-300;
    }
  }

  &.disabled {
    cursor: default;

    &.light {
      background-color: colors.$primary-300;
      border: $border-size solid colors.$secondary-400;
    }

    &.dark {
      background-color: colors.$primary-200;
      border: $border-size solid colors.$secondary-300;
    }
  }

  &.checked {
    &.light {
      background-color: colors.$primary-300;
      border: $border-size solid colors.$primary-200;
    }

    &.dark {
      background-color: colors.$primary-200;
      border: $border-size solid colors.$primary-100;
    }

    &:hover {
      &.light {
        background-color: colors.$primary-300;
        border: $border-size solid colors.$primary-200;
      }

      &.dark {
        background-color: colors.$primary-200;
        border: $border-size solid colors.$primary-100;
      }
    }

    &.error {
      &.light {
        background-color: colors.$primary-200;
        border: $border-size solid colors.$primary-200;
      }

      &.dark {
        background-color: colors.$primary-100;
        border: $border-size solid colors.$primary-100;
      }
    }

    &:active {
      &.light {
        background-color: colors.$primary-300;
        border: $border-size solid colors.$primary-200;
      }

      &.dark {
        background-color: colors.$primary-200;
        border: $border-size solid colors.$primary-100;
      }
    }

    &.readonly {
      cursor: default;

      &.light {
        background-color: colors.$primary-300;
        border: $border-size solid colors.$primary-300;
      }

      &.dark {
        background-color: colors.$primary-200;
        border: $border-size solid colors.$primary-200;
      }
    }

    &.disabled {
      cursor: default;

      &.light {
        background-color: colors.$secondary-200;
        border: $border-size solid colors.$secondary-200;
      }

      &.dark {
        background-color: colors.$primary-200;
        border: $border-size solid colors.$secondary-400;
      }
    }
  }
}

.checksign {
  @include checkmark-base;

  display: inline-block;
  visibility: hidden;

  &.checked {
    visibility: visible;

    &.light {
      background-color: colors.$primary-200;
    }

    &.dark {
      background-color: colors.$primary-100;
    }

    &:hover {
      &.light {
        background-color: colors.$primary-200;
      }

      &.dark {
        background-color: colors.$primary-100;
      }
    }

    &:active {
      &.light {
        background-color: colors.$primary-200;
      }

      &.dark {
        background-color: colors.$primary-100;
      }
    }

    &.readonly {
      cursor: default;

      &.light {
        background-color: colors.$primary-200;
      }

      &.dark {
        background-color: colors.$primary-300;
      }
    }

    &.error {
      &.light {
        background-color: colors.$primary-300;
      }

      &.dark {
        background-color: colors.$primary-200;
      }
    }

    &.disabled {
      cursor: default;

      &.light {
        background-color: colors.$secondary-400;
      }

      &.dark {
        background-color: colors.$secondary-400;
      }
    }
  }
}

.label {
  font-size: 16px;
  cursor: pointer;
  margin-left: 12px;

  &.light {
    color: colors.$primary-200;
  }

  &.dark {
    color: colors.$primary-300;
  }

  &.required {
    &::after {
      content: '*';
    }
  }

  &.error {
    &.light {
      color: colors.$error-200;
    }

    &.dark {
      color: colors.$error-100;
    }
  }

  &.readonly {
    cursor: default;

    &.light {
      color: colors.$secondary-400;
    }

    &.dark {
      color: colors.$secondary-400;
    }
  }

  &.disabled {
    cursor: default;

    &.light {
      color: colors.$secondary-400;
    }

    &.dark {
      color: colors.$secondary-400;
    }
  }

  &.checked {
    &.error {
      &.light {
        color: colors.$primary-200;
      }

      &.dark {
        color: colors.$primary-300;
      }
    }
  }
}

